# FastAPI-MakeSimpleAPI

./: .gitignore  Makefile  README.md  pyproject.toml
fastapi_makesimpleapi/: main.py  simple_controller.py  simple_service.py  utils.py
tests/: test_make_simple_api.py
