[tool.pdm]

[project]
name = "FastAPI-MakeSimpleAPI"
version = "0.1.0"
description = "Build simple webapp using make-simple-api"
authors = [
    {name = "limjiyoon", email = "luinpark@gmail.com"},
]
dependencies = [
    "fastapi>=0.94.0",
    "pytest>=7.2.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
